# cpp-sandbox

./: .gitmodules  CMakeLists.txt  README.md
better-cmake/example/: CMakeLists.txt
better-cmake/fancylib/: CMakeLists.txt
better-cmake/fancylib/cmake/: FancyLibConfig.cmake.in  configuration.cmake
better-cmake/fancylib/example/: CMakeLists.txt  main.cpp
better-cmake/fancylib/src/: CMakeLists.txt
better-cmake/fancylib/src/core/: coreutils.cpp  coreutils.h  fancyutils.cpp
better-cmake/fancylib/src/public/: fancyutils.h
better-cmake/fancylib/tests/: CMakeLists.txt
better-cmake/fancylib/tests/src/: testapi.cpp
cppmisc/: CMakeLists.txt  concatenate-functions.cpp  concurrency-threadsafe-stack.cpp  condition_variable.cpp  destructionorder.cpp  following-josuttis-lecture.cpp  helloworld.cpp  iota.cpp  lambda-misc.cpp  meta_practice1.cpp  parallel-accumulate.cpp  partial_specialization.cpp  polymorphic_clone.cpp  polymorphic_clone_variadic_crtp.cpp  prefix-tree.cpp  sampling-large-vectors.cpp  stl-algorithm-basics.cpp  string-algorithm-exercises.cpp
hellomodules/: CMakeLists.txt  build.sh  helloworld.cpp  main.cpp
